<resources>
    <string name="app_name">I Have Been</string>

    <string name="HardCluePlaceHolderText">Hard Clue</string>
    <string name="MediumCluePlaceHolderText">Medium Clue</string>
    <string name="Easy1CluePlaceHolderText">Easy Clue 1</string>
    <string name="Easy2CluePlaceHolderText">Easy Clue 2</string>
    <string name="GiveAwayCluePlaceHolderText">Give Away Clue</string>
    <string name="IHaveBeen">I Have Been:</string>
    <string name="HintTextPlaceHolder">Type Your Guess Here</string>
    <string name="title_activity_user_profile">I Have Been</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_game_start">Ready to play?</string>
    <string name="title_activity_next_round">Results</string>
    <string name="title_activity_results">Results</string>
    <string name="email_prompt">E-Mail</string>
    <string name="Password">Password</string>
    <string name="Log_in">Log In</string>
    <string name="Sign_Up">Sign Up</string>
    <string name="title_activity_welcome">I Have Been</string>
    <string name="title_activity_sign_up">Sign Up!</string>
    <string name="title_activity_log_in">I Have Been</string>
    <string name="Logo_Text">Large Text</string>
    <string name="Email">E-Mail</string>
    <string name="app_id">1614959885456261</string>
    <string name="ABLogOut">Log Out</string>
    <string name="gameSubmitButton">Submit</string>


    <string name="verifiyStart">New Button</string>
    <string name="verifyStartMessage">Are you sure you want to start a new game with</string>
    <string name="title_activity_verify_start">No, I said, ARE YOU READY!!!!</string>
    <string name="StartGame">Start A New Game</string>
    <string name="randomSelectButton">Randomly Select Opponent</string>

    <string name="title_activity_you_failed">You Failed</string>
    <string name="you_have_failed">YOU HAVE FAILED</string>
    <string name="fail_paragraph">Your guesses were stupid, and we are all now dumber for having witnessed it.  I award you no points and may god have mercy on your soul.  Now go sit in shame and await your opponent\'s score.</string>
    <string name="shame_button">New Button</string>
    <string name="fail_button">Walk of shame</string>
    <string name="you_have_failed_me">You have failed to figure out who I am.</string>
    <string name="congrats_text">YOU DID IT!!</string>
    <string name="your_score_is">Your Score is:</string>
    <string name="back_to_profile">Back to profile</string>
    <string name="wait_for_opponent_text">Great Job! Now head back to the profile page and await your opponents score. Good Luck!</string>
    <string name="opponents_Score_Text">New Text</string>
    <string name="yourScoreText">Your Score:</string>

    <string name="title_activity_are_you_ready">Are You Ready</string>
    <string name="are_you_ready">Large Text</string>
    <string name="score_to_beat">Medium Text</string>
    <string name="lets_do_this">LET\'S DO THIS!!</string>
    <string name="ticketsText">Medium Text</string>
    <string name="submit_button">Submit</string>
    <string name="buy_another_clue">Buy Another Clue</string>
    <string name="waiting_for_you_text">Your Turn</string>
    <string name="waiting_for_opponent">Waiting for your opponent</string>
    <string name="complete_game_text">Completed Games</string>
    <string name="you_failed_start_line">You have failed to figure out who I am.</string>
    <string name="new_Welcome_Text">WELCOME TO I HAVE BEEN!!</string>
    <string name="new_welcome_paragraph">Please log in and enjoy the game.</string>
    <string name="number_of_wins_label">Number of wins:</string>
    <string name="current_tickets_label">Current Tickets</string>
    <string name="win_percentage_label">Win percentage:</string>
    <string name="active_games_label">Active Games</string>
    <string name="completed_games_label">Completed Games</string>
    <string name="random_play_label">Random play</string>
    <string name="users_profile_picture_CD">Users profile picture</string>
    <string name="welcome_to">Welcome to:</string>
    <string name="in_order_to_play_you_must_sign_in">In order to play you must sign in.</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="title_activity_game_choice">GameChoiceActivity</string>
    <string name="new_random_game">Random Game</string>
    <string name="new_game_with_friends">Play your friends</string>
    <string name="play_creators">Play Creators</string>
    <string name="start_a_new_game_against_a_random_player">Start a new game against a random player</string>
    <string name="notConnectedToSocial">You must connect with Facebook or Twitter to play your friends. Click here to sign in.</string>
    <string name="start_new_friend_game_text">Start a new game against your friend</string>
    <string name="try_the_creators">Congrats, you have earned the right to play the creators.  Go ahead, We dare you.</string>
    <string name="cant_play_creators">You have not yet earned the right to play us.</string>


</resources>
