<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_game2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sca.ihavebeen.GameActivity">

    <TextView
        android:text="@string/IHaveBeen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        app:layout_constraintLeft_toLeftOf="@+id/activity_game2"
        app:layout_constraintTop_toTopOf="@+id/activity_game2"
        android:layout_marginTop="16dp"
        app:layout_constraintRight_toRightOf="@+id/activity_game2" />

    <android.support.v7.widget.CardView
        android:layout_height="wrap_content"
        android:id="@+id/clueCardView"
        android:layout_width="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/activity_game2"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_marginTop="48dp"
        app:layout_constraintRight_toRightOf="@+id/activity_game2"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/gameClueLinearLayout"
            tools:layout_editor_absoluteX="176dp"
            tools:layout_editor_absoluteY="0dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/hardClueTextView"
                android:layout_gravity="center_horizontal"
                android:text="@string/HardCluePlaceHolderText"
                android:visibility="visible"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mediumClueTextView"
                android:layout_gravity="center_horizontal"
                android:text="@string/MediumCluePlaceHolderText"
                android:visibility="invisible"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="132dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/easy1ClueTextView"
                android:layout_gravity="center_horizontal"
                android:text="@string/Easy1CluePlaceHolderText"
                android:visibility="invisible"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="297dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/easy2ClueTextView"
                android:layout_gravity="center_horizontal"
                android:text="@string/Easy2CluePlaceHolderText"
                android:visibility="invisible"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="445dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/giveAwayClueTextView"
                android:layout_gravity="center_horizontal"
                android:text="@string/GiveAwayCluePlaceHolderText"
                android:visibility="invisible"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="511dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <AutoCompleteTextView
        android:layout_width="201dp"
        android:layout_height="46dp"
        android:hint="@string/HintTextPlaceHolder"
        android:id="@+id/userGuessBox"
        android:imeOptions="actionDone"
        app:layout_constraintLeft_toLeftOf="@+id/clueCardView"
        app:layout_constraintTop_toBottomOf="@+id/clueCardView"
        android:layout_marginTop="48dp"
        app:layout_constraintRight_toRightOf="@+id/clueCardView" />

    <Button
        android:text="@string/submit_button"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:id="@+id/gameSubmitButton"
        app:layout_constraintLeft_toLeftOf="@+id/userGuessBox"
        app:layout_constraintTop_toBottomOf="@+id/userGuessBox"
        android:layout_marginTop="16dp"
        app:layout_constraintRight_toRightOf="@+id/userGuessBox" />

    <Button
        android:text="@string/buy_another_clue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buyGiveAwayButton"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintRight_toLeftOf="@+id/textView"
        android:layout_marginRight="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView" />
</android.support.constraint.ConstraintLayout>
