<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@color/background_gold"
    tools:context="com.example.sca.ihavebeen.YouFailed"
    android:id="@+id/failRelLayout">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal|top">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/you_have_failed"
            android:id="@+id/failTextView"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/fail_paragraph"
            android:id="@+id/failParagraph"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@color/darker_gold" />

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:textStyle="bold|italic"
            android:textColor="@color/action_bar_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fail_button"
            android:id="@+id/failButton"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/you_failed_start_line"
            android:id="@+id/youHaveFailedTextView"
            android:layout_above="@+id/failParagraph"
            android:layout_centerHorizontal="true"
            android:paddingBottom="13dp"
            android:textStyle="bold|italic"
            android:textSize="20sp" />

    </RelativeLayout>
</FrameLayout>
