<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@color/background_gold"
    tools:context="com.example.sca.ihavebeen.ResultsActivity"
    >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal|top">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/congrats_text"
            android:id="@+id/congrats"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="45dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/your_score_is"
            android:id="@+id/yourScoreTextView"
            android:layout_below="@+id/congrats"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="130dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/score"
            tools:text="1000"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:textStyle="bold|italic"
            android:textColor="@color/action_bar_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_to_profile"
            android:id="@+id/backToProfile"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/wait_for_opponent_text"
            android:id="@+id/waitForOpponent"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/score"
            android:layout_centerHorizontal="true"
            android:paddingLeft="25dp"
            android:paddingRight="25dp" />
    </RelativeLayout>
</FrameLayout>
