<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_user_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sca.ihavebeen.NewUserProfile">


    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:srcCompat="@drawable/com_facebook_profile_picture_blank_portrait"
        android:id="@+id/imageView"
        android:contentDescription="@string/users_profile_picture_CD"
        app:layout_constraintLeft_toLeftOf="@+id/activity_new_user_profile"
        app:layout_constraintTop_toTopOf="@+id/activity_new_user_profile"
        android:layout_marginTop="16dp"
        app:layout_constraintRight_toRightOf="@+id/activity_new_user_profile" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/userName"
        tools:text="Users Name"
        app:layout_constraintLeft_toLeftOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toRightOf="@+id/imageView" />

    <Button
        android:text="@string/active_games_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:id="@+id/activeGamesButton"
        app:layout_constraintTop_toBottomOf="@+id/playerStatsCard"
        android:layout_marginTop="32dp"
        app:layout_constraintRight_toLeftOf="@+id/userName" />

    <Button
        android:text="@string/completed_games_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:id="@+id/completedGamesButton"
        app:layout_constraintLeft_toRightOf="@+id/userName"
        app:layout_constraintTop_toTopOf="@+id/activeGamesButton" />



    <android.support.v7.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/playerStatsCard"
        app:layout_constraintLeft_toLeftOf="@+id/activity_new_user_profile"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/userName"
        android:layout_marginTop="32dp"
        app:layout_constraintRight_toRightOf="@+id/activity_new_user_profile"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp">


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">

            <TextView
                android:text="@string/number_of_wins_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:padding="4dp"
                android:id="@+id/winLabelTextView"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp" />

            <TextView
                android:text="@string/current_tickets_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:id="@+id/ticketLabelTextView"
                tools:layout_editor_absoluteX="125dp"
                tools:layout_editor_absoluteY="0dp" />

            <TextView
                android:text="@string/win_percentage_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:id="@+id/winPercentageLabelTextView"
                tools:layout_editor_absoluteX="243dp"
                tools:layout_editor_absoluteY="0dp" />

            <TextView
                tools:text="150"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:textSize="45sp"
                android:padding="4dp"
                android:layout_below="@id/winLabelTextView"
                android:layout_alignLeft="@+id/ticketLabelTextView"
                android:layout_alignStart="@+id/ticketLabelTextView"
                android:id="@+id/ticketTextView"
                android:layout_alignRight="@+id/ticketLabelTextView"
                android:layout_alignEnd="@+id/ticketLabelTextView"
                tools:layout_editor_absoluteX="125dp"
                tools:layout_editor_absoluteY="24dp" />

            <TextView
                tools:text="200"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:padding="4dp"
                android:textSize="45sp"
                android:id="@+id/winsTextView"
                android:layout_below="@id/ticketLabelTextView"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="24dp" />

            <TextView
                tools:text="87%"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:id="@+id/textView16"
                android:padding="4dp"
                android:textSize="45sp"
                android:layout_centerVertical="true"
                android:layout_below="@id/winPercentageLabelTextView"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                tools:layout_editor_absoluteX="260dp"
                tools:layout_editor_absoluteY="24dp" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="43dp"
        android:layout_height="43dp"
        android:clickable="true"
        app:fabSize="mini"
        app:srcCompat="@android:drawable/ic_menu_add"
        android:id="@+id/newGameFab"
        app:layout_constraintRight_toRightOf="@+id/activity_new_user_profile"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/activity_new_user_profile"
        android:layout_marginBottom="16dp" />

</android.support.constraint.ConstraintLayout>
